# claude-rpc

./: CHANGELOG.md  README.md  package.json
.github/workflows/: release.yml
scripts/: build-tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: daemon.rs  main.rs
tauri-ui/: index.html  main.js  styles.css
