[package]
name = "claude_rpc_tray"
version = "3.3.0"
description = "Claude RPC"
authors = ["StealthyLabs"]
license = "ISC"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
] }
